chore: using supabase

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,4 +1,5 @@
-project_id = "hhaufizlhagxkprrczil"
+# project_id = "hhaufizlhagxkprrczil"
+project_id = "hcqxxoyhnmzpuqulcgjv"
 
 [functions.process-sensor-reading]
 verify_jwt = false
