chore: updated example.env

--- a/example.env
+++ b/example.env
@@ -1,3 +1,6 @@
 VITE_SUPABASE_PROJECT_ID=""
 VITE_SUPABASE_PUBLISHABLE_KEY=""
 VITE_SUPABASE_URL="https://example.supabase.co"
+
+EMAIL_API_URL="http://example.com/api/email/send"
+WHATSAPP_API_URL="http://example.com/api/whatsapp/send"
